--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.2.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
+frozenlist==1.3.3
 idna==3.4
+multidict==6.0.4
+numpy==1.24.2
+openai==0.27.1
+pycparser==2.21
 requests==2.28.2
+sounddevice==0.4.6
 SpeechRecognition==3.9.0
+tqdm==4.65.0
 urllib3==1.26.15
+yarl==1.8.2
