--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ frozenlist==1.3.3
 google-api-core==2.11.0
 google-auth==2.16.2
 google-cloud-speech==2.18.0
+google-cloud-texttospeech==2.14.1
 googleapis-common-protos==1.58.0
 grpcio==1.51.3
 grpcio-status==1.51.3
