--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ requests==2.28.2
 rsa==4.9
 six==1.16.0
 sounddevice==0.4.6
+soundfile==0.12.1
 SpeechRecognition==3.10.0
 tqdm==4.65.0
 urllib3==1.26.15
