--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ idna==3.4
 multidict==6.0.4
 numpy==1.24.2
 openai==0.27.1
+playsound==1.3.0
 proto-plus==1.22.2
 protobuf==4.22.1
 pyasn1==0.4.8
@@ -32,4 +33,5 @@ soundfile==0.12.1
 SpeechRecognition==3.10.0
 tqdm==4.65.0
 urllib3==1.26.15
+websockets==10.4
 yarl==1.8.2
