--- a/.gitignore
+++ b/.gitignore
@@ -271,4 +271,4 @@ cython_debug/
 *.wav
 .gitpod.yml
 app/STT/myapikey.json
-# git update-index --assume-unchanged resources/openai_key.json
+# git update-index --assume-unchanged app/resources/openai_key.json
