--- a/.gitignore
+++ b/.gitignore
@@ -270,5 +270,5 @@ cython_debug/
 *.mp3
 *.wav
 .gitpod.yml
-app/STT/myapikey.json
+app/resources/myapikey.json
 # git update-index --assume-unchanged app/resources/openai_key.json
