--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,39 @@
+absl-py==1.4.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.2.0
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+flatbuffers==23.3.3
 frozenlist==1.3.3
+gast==0.4.0
 google-api-core==2.11.0
 google-auth==2.16.2
+google-auth-oauthlib==1.0.0
 google-cloud-speech==2.18.0
 google-cloud-texttospeech==2.14.1
+google-pasta==0.2.0
 googleapis-common-protos==1.58.0
 grpcio==1.51.3
 grpcio-status==1.51.3
+h5py==3.8.0
 idna==3.4
+jax==0.4.8
+keras==2.12.0
+libclang==16.0.0
+Markdown==3.4.3
+MarkupSafe==2.1.2
+ml-dtypes==0.1.0
 multidict==6.0.4
-numpy==1.24.2
+numpy==1.23.5
+oauthlib==3.2.2
 openai==0.27.1
+opt-einsum==3.3.0
+packaging==23.1
 playsound==1.3.0
 proto-plus==1.22.2
 protobuf==4.22.1
@@ -26,12 +42,22 @@ pyasn1-modules==0.2.8
 PyAudio==0.2.13
 pycparser==2.21
 requests==2.28.2
+requests-oauthlib==1.3.1
 rsa==4.9
+scipy==1.10.1
 six==1.16.0
 sounddevice==0.4.6
 soundfile==0.12.1
 SpeechRecognition==3.10.0
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.12.0
+termcolor==2.2.0
 tqdm==4.65.0
+typing_extensions==4.5.0
 urllib3==1.26.15
 websockets==10.4
+Werkzeug==2.2.3
+wrapt==1.14.1
 yarl==1.8.2
