--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
 absl-py==1.4.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+appdirs==1.4.4
 astunparse==1.6.3
 async-timeout==4.0.2
 attrs==22.2.0
+audioread==3.0.0
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
-flatbuffers==23.3.3
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+Cython==0.29.34
+dataclasses==0.6
+decorator==5.1.1
+Distance==0.1.3
+filelock==3.11.0
+flatbuffers==1.12
+fonttools==4.39.3
 frozenlist==1.3.3
+g2p-en==2.1.0
+g2pM==0.1.2.5
 gast==0.4.0
 google-api-core==2.11.0
 google-auth==2.16.2
-google-auth-oauthlib==1.0.0
+google-auth-oauthlib==0.4.6
 google-cloud-speech==2.18.0
 google-cloud-texttospeech==2.14.1
 google-pasta==0.2.0
@@ -21,41 +34,72 @@ googleapis-common-protos==1.58.0
 grpcio==1.51.3
 grpcio-status==1.51.3
 h5py==3.8.0
+huggingface-hub==0.0.8
 idna==3.4
+inflect==6.0.4
+jamo==0.4.1
 jax==0.4.8
-keras==2.12.0
+joblib==1.2.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+lazy_loader==0.2
 libclang==16.0.0
+librosa==0.10.0.post2
+llvmlite==0.39.1
 Markdown==3.4.3
 MarkupSafe==2.1.2
+matplotlib==3.7.1
 ml-dtypes==0.1.0
+msgpack==1.0.5
 multidict==6.0.4
+nltk==3.8.1
+numba==0.56.4
 numpy==1.23.5
 oauthlib==3.2.2
 openai==0.27.1
 opt-einsum==3.3.0
 packaging==23.1
+Pillow==9.5.0
 playsound==1.3.0
+pooch==1.6.0
 proto-plus==1.22.2
-protobuf==4.22.1
+protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyAudio==0.2.13
 pycparser==2.21
+pydantic==1.10.7
+pyopenjtalk==0.3.0
+pyparsing==3.0.9
+pypinyin==0.48.0
+python-dateutil==2.8.2
+pyworld==0.3.2
+PyYAML==6.0
+regex==2023.3.23
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 sounddevice==0.4.6
 soundfile==0.12.1
+soxr==0.3.5
 SpeechRecognition==3.10.0
-tensorboard==2.12.1
-tensorboard-data-server==0.7.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.12.0
+tensorflow-addons==0.20.0
+tensorflow-estimator==2.9.0
+TensorFlowTTS @ git+https://github.com/jordenchang55/TensorFlowTTS.git@99fa9feed959bcd01ecb6097f75f92e7d6cc450e
 termcolor==2.2.0
+TextGrid==1.5
+threadpoolctl==3.1.0
 tqdm==4.65.0
+typeguard==2.13.3
 typing_extensions==4.5.0
+Unidecode==1.3.6
 urllib3==1.26.15
 websockets==10.4
 Werkzeug==2.2.3
