--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ dataclasses==0.6
 decorator==5.1.1
 Distance==0.1.3
 filelock==3.11.0
-flatbuffers==1.12
+flatbuffers==23.3.3
 fonttools==4.39.3
 frozenlist==1.3.3
 g2p-en==2.1.0
@@ -26,7 +26,7 @@ g2pM==0.1.2.5
 gast==0.4.0
 google-api-core==2.11.0
 google-auth==2.16.2
-google-auth-oauthlib==0.4.6
+google-auth-oauthlib==1.0.0
 google-cloud-speech==2.18.0
 google-cloud-texttospeech==2.14.1
 google-pasta==0.2.0
@@ -40,7 +40,7 @@ inflect==6.0.4
 jamo==0.4.1
 jax==0.4.8
 joblib==1.2.0
-keras==2.9.0
+keras==2.12.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 lazy_loader==0.2
@@ -64,7 +64,7 @@ Pillow==9.5.0
 playsound==1.3.0
 pooch==1.6.0
 proto-plus==1.22.2
-protobuf==3.19.6
+protobuf==4.22.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyAudio==0.2.13
@@ -87,11 +87,12 @@ sounddevice==0.4.6
 soundfile==0.12.1
 soxr==0.3.5
 SpeechRecognition==3.10.0
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 tensorflow-addons==0.20.0
-tensorflow-estimator==2.9.0
+tensorflow-estimator==2.12.0
+tensorflow-macos==2.12.0
 TensorFlowTTS @ git+https://github.com/jordenchang55/TensorFlowTTS.git@99fa9feed959bcd01ecb6097f75f92e7d6cc450e
 termcolor==2.2.0
 TextGrid==1.5
